miniextendr-macros/tests/ui/derive_dataframe_field_as_list_expand_conflict.stderr
error: `as_list` and `expand`/`unnest` are mutually exclusive
 --> tests/ui/derive_dataframe_field_as_list_expand_conflict.rs:8:5
  |
8 |     coords: [f64; 3],
  |     ^^^^^^
